--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,15 @@
 {
-  "short_name": "KAYALSTAY",
-  "name": "KAYALSTAY - Find Your Perfect Stay",
+  "name": "Kayalstay App",
+  "short_name": "Kayalstay",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#06B6D4",
+  "theme_color": "#000000",
   "background_color": "#ffffff"
 }
