Update Stripe API key configuration instructions and add README files

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
+# Development environment variables
 VITE_API_URL=http://localhost:5000/api
-VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+# Get your publishable key from https://dashboard.stripe.com/test/apikeys
+# Use pk_test_ key for development/testing
+VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_actual_publishable_key_here
