--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,5 @@
+# Production environment variables
 VITE_API_URL=https://kayalstay-backend.onrender.com/api
-VITE_STRIPE_PUBLISHABLE_KEY=pk_live_your_production_stripe_publishable_key_here
+# Get your publishable key from https://dashboard.stripe.com/apikeys
+# Use pk_live_ key for production
+VITE_STRIPE_PUBLISHABLE_KEY=pk_live_your_actual_publishable_key_here
