--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,7 @@ VITE_API_URL=https://kayalstay-backend.onrender.com/api
 # Get your publishable key from https://dashboard.stripe.com/apikeys
 # Use pk_live_ key for production
 VITE_STRIPE_PUBLISHABLE_KEY=pk_live_your_actual_publishable_key_here
+# Get your Google Maps API key from https://console.cloud.google.com/apis/credentials
+VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+# Get your Razorpay key from https://dashboard.razorpay.com/app/keys
+VITE_RAZORPAY_KEY_ID=rzp_live_your_key_id_here
