Rebrand to Quickit and integrate map search feature

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Kayalstay App",
-  "short_name": "Kayalstay",
+  "name": "Quickit App",
+  "short_name": "Quickit",
   "icons": [
     {
       "src": "/favicon.ico",
