Fix manifest.json 401 error by excluding static files from rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,22 @@
 {
+  "headers": [
+    {
+      "source": "/manifest.json",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/json"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    }
+  ],
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!manifest\\.json|favicon\\.ico|logo.*\\.png|.*\\.js|.*\\.css|.*\\.png|.*\\.jpg|.*\\.jpeg|.*\\.gif|.*\\.svg|.*\\.ico).*)",
       "destination": "/index.html"
     }
   ]
