Update API URL to api.quickit.com

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # Production environment variables
-VITE_API_URL=https://kayalstay-backend.onrender.com/api
+VITE_API_URL=https://api.quickit.com/api
 # Get your publishable key from https://dashboard.stripe.com/apikeys
 # Use pk_live_ key for production
 VITE_STRIPE_PUBLISHABLE_KEY=pk_live_your_actual_publishable_key_here
